--- a/Css/style.css
+++ b/Css/style.css
@@ -210,6 +210,13 @@ p.close-btn{
     border-radius: 16px;
 }
 
+/*Maps*/
+
+#map{
+    width: 100%;
+    height: 300px;
+}
+
 /*Footer*/
 
 .container__footer{
